# ompi

./: ARM_SVE_README  ORTE_relilient_Build_Test_Recipe  arm_install.sh  test.txt
config/: opal_config_asm.m4
examples/: daemon_error_notify.c  error_notify.c  kill.1  mpi_init_finalize  mpi_init_finalize.c  notes  out.txt  ring_c_debug.c  test.txt  test10-k8-k4-k3-k2.10  test16.k3  test16.k4  test28.k07  testk10
ompi/mca/bcol/iboffload/: bcol_iboffload_component.c
ompi/mca/op/: Makefile.am
ompi/mca/op/arm_sve_op/: Makefile.am  configure.m4  op_sve.h  op_sve_component.c  op_sve_functions.c  op_sve_functions.h  op_sve_module_bxor.c  op_sve_module_max.c  op_sve_module_min.c  op_sve_module_prod2buf.c  op_sve_module_sum.c
ompi/mca/op/avx/: Makefile.am  configure.m4  op_avx.h  op_avx_component.c  op_avx_functions.c  op_avx_functions.h
ompi/mca/op/intel_avx_op/: Makefile.am  op_avx.h  op_avx_component.c  op_avx_functions.c  op_avx_functions.h
ompi/mca/op/sve/: Makefile.am  configure.m4  op_sve.h  op_sve_component.c  op_sve_functions.c  op_sve_functions.h
ompi/mpi/c/: init.c
opal/datatype/: opal_convertor.c  opal_datatype_memcpy.h  opal_datatype_pack.c  opal_datatype_pack.h  opal_datatype_prototypes.h  opal_datatype_unpack.c  opal_datatype_unpack.h
opal/mca/base/: mca_base_components_select.c
opal/mca/btl/scif/: btl_scif_component.c
opal/mca/btl/usnic/: btl_usnic_module.c
opal/mca/common/sm/: common_sm_mpool.c
opal/mca/pmix/ext3x/: ext3x.h
orte/mca/errmgr/: errmgr.h
orte/mca/errmgr/base/: errmgr_base_frame.c  errmgr_base_select.c
orte/mca/errmgr/default_app/: errmgr_default_app.c
orte/mca/errmgr/default_hnp/: errmgr_default_hnp.c  errmgr_default_hnp_component.c
orte/mca/errmgr/default_orted/: errmgr_default_orted.c
orte/mca/errmgr/default_tool/: errmgr_default_tool.c
orte/mca/errmgr/detector/: .errmgr_propagator.c.swp  Makefile.am  errmgr_detector.c  errmgr_detector.h  errmgr_detector_component.c  errmgr_handler.c  errmgr_propagator.c
orte/mca/errmgr/dvm/: errmgr_dvm.c
orte/mca/ess/base/: ess_base_std_app.c  ess_base_std_orted.c
orte/mca/ess/env/: ess_env_module.c
orte/mca/ess/hnp/: ess_hnp_module.c
orte/mca/grpcomm/: grpcomm.h
orte/mca/grpcomm/base/: base.h  grpcomm_base_frame.c  grpcomm_base_stubs.c
orte/mca/grpcomm/bmg/: grpcomm_bmg.h  grpcomm_bmg_component.c  grpcomm_bmg_module.c
orte/mca/grpcomm/brucks/: grpcomm_brucks_module.c
orte/mca/grpcomm/direct/: grpcomm_direct.c
orte/mca/grpcomm/rcd/: grpcomm_rcd.c
orte/mca/odls/base/: odls_base_default_fns.c  odls_base_frame.c
orte/mca/plm/base/: plm_base_launch_support.c  plm_base_orted_cmds.c
orte/mca/propagate/: propagate.h
orte/mca/propagate/base/: Makefile.am  base.h  propagate_base_frame.c  propagate_base_select.c
orte/mca/propagate/prperror/: propagate_prperror.c  propagate_prperror.h  propagate_prperror_component.c
orte/mca/rml/: rml_types.h
orte/mca/state/base/: state_base_fns.c
orte/mca/state/dvm/: state_dvm.c
orte/orted/: orted_comm.c  orted_submit.c
orte/orted/pmix/: pmix_server_fence.c
orte/runtime/: orte_finalize.c  orte_globals.c  orte_globals.h  orte_init.c  orte_mca_params.c
orte/test/mpi/spawn-problem/: ch_rec  start
src/mca/errmgr/: errmgr.h
src/mca/errmgr/dvm/: errmgr_dvm.c
src/mca/ess/base/: ess_base_std_prted.c
src/mca/ess/hnp/: ess_hnp_module.c
src/mca/grpcomm/: grpcomm.h
src/mca/grpcomm/base/: grpcomm_base_frame.c
src/mca/odls/base/: odls_base_default_fns.c
test/datatype/: HOW_TO_TEST_README.txt  Makefile.am  Reduce_local_float.c  Reduce_local_uint8.c  Reduce_uint8.c  SVE_MPI_Op.py  avx_gather_benchmark.c  check_op.sh  correctness_check.sh  reduce_local.c  sve_uint8_test.sh  to_self.c
